--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Cameron Pittman: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
     <script>
      WebFont.load({
         google: {
@@ -18,10 +18,7 @@
       });
     </script>
     
-<!--    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">-->
-
     <link href="css/style.css" rel="stylesheet">
-<!--    <link href="css/print.css" rel="stylesheet">-->
 
     <script>
         (function (w, g) {
@@ -42,7 +39,7 @@
 
 <body>
     <header>
-        <a href="/"><img src="img/profilepic.jpg"></a>
+        <a href="/"><img src="img/profilepic-100.jpg"></a>
         <p>Cameron Pittman
             <br><span>Course Developer</span></p>
     </header>
@@ -74,7 +71,7 @@
                 </li>
 
                 <li>
-                    <img style="width: 100px;" src="views/images/pizzeria.jpg">
+                    <img style="width: 100px;" src="views/images/pizzeria-100.jpg">
                     <a href="views/pizza.html">Cam's Pizzeria</a>
                     <p>Who wants a performant pizza?</p>
                 </li>
