fix: google font loading test
Also minified one of the images

--- a/index.html
+++ b/index.html
@@ -9,18 +9,9 @@
     <title>Cameron Pittman: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
-    <script>
-     WebFont.load({
-        google: {
-          families: ['Open Sans :400,700']
-        }
-      });
-    </script>
-    
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href="css/style.css" rel="stylesheet">
 
-    <script>
         (function (w, g) {
             w['GoogleAnalyticsObject'] = g;
             w[g] = w[g] || function () {
