--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href="css/style.css" rel="stylesheet">
+    <link href="print.css" rel="stylesheet" media="print">
 
         (function (w, g) {
             w['GoogleAnalyticsObject'] = g;
