--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<!DOCTYPE html><html lang="en"><meta charset="utf-8"><meta content="width=device-width,initial-scale=1" name="viewport"><meta content=" FILL ME IN " name="description"><meta content=" FILL ME IN " name="author"><title>Cameron Pittman: Portfolio</title><link href="css/print.css" rel="stylesheet" media="print"><style>html {
+<!DOCTYPE html>
+<html lang=en>
+<meta charset=utf-8>
+<meta content="width=device-width,initial-scale=1" name=viewport>
+<meta content=" FILL ME IN " name=description>
+<meta content=" FILL ME IN " name=author>
+<title>Cameron Pittman: Portfolio</title>
+<link href=css/print.css rel=stylesheet media=print>
+<style>
+    html {
         font-size: 100%;
         overflow-y: scroll;
         -webkit-tap-highlight-color: transparent;
@@ -138,16 +147,46 @@
         header p {
             padding-left: 4.5em
         }
-    }</style><script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script><script>WebFont.load({
-        google: {
-            families: ['Open+Sans:400,700']
-        },
-        active: function(){ 
-        //when fonts loaded
-            console.log('fonts loaded');
-        }
-    });</script><script>! function (e, n) {
+    }
+</style>
+<script>
+   WebFontConfig = {
+       google: { families: [ 'Open+Sans:400,700' ]
+       }
+   };
+
+   (function(d) {
+      var wf = d.createElement('script'), s = d.scripts[0];
+      wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js';
+      s.parentNode.insertBefore(wf, s);
+   })(document);
+</script>
+<script>
+    ! function (e, n) {
         e.GoogleAnalyticsObject = n, e[n] = e[n] || function () {
             (e[n].q = e[n].q || []).push(arguments)
         }, e[n].l = 1 * new Date
-    }(window, "ga"), ga("create", "UA-XXXX-Y"), ga("send", "pageview")</script><script async src="http://www.google-analytics.com/analytics.js"></script><script async src="js/perfmatters.js"></script><header><a href="/"><img src="img/profilepic-100.jpg"></a><p>Cameron Pittman<br><span>Course Developer</span></p></header><div class="container"><div class="hero"><strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :)<br>Contact me: me@email.com</div><div class="content"><ul><li><img src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100"> <a href="project-2048.html">Build Your Own 2048!</a><p>I made my own version of 2048. How cool is that!?</p></li><li><img src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100"> <a href="project-webperf.html">Website Performance Optimization</a><p>Hey... this class looks familiar.</p></li><li><img src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100"> <a href="project-mobile.html">Mobile Web Development</a><p>Making mobile apps isn't so hard after all.</p></li><li><img src="views/images/pizzeria-100.jpg" style="width:100px"> <a href="views/pizza.html">Cam's Pizzeria</a><p>Who wants a performant pizza?</p></li></ul></div><footer><p>© Web Performance 2014 <span id="crp-stats"></span></p></footer></div></html>
+    }(window, "ga"), ga("create", "UA-XXXX-Y"), ga("send", "pageview")
+</script>
+<script async src=http://www.google-analytics.com/analytics.js></script>
+<script async src=js/perfmatters.js></script>
+<header><a href=/><img src=img/profilepic-100.jpg></a>
+    <p>Cameron Pittman
+        <br><span>Course Developer</span></header>
+<div class=container>
+    <div class=hero><strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :)
+        <br>Contact me: me@email.com</div>
+    <div class=content>
+        <ul>
+            <li><img src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100"> <a href=project-2048.html>Build Your Own 2048!</a>
+            <p>I made my own version of 2048. How cool is that!?
+            <li><img src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100"> <a href=project-webperf.html>Website Performance Optimization</a>
+            <p>Hey... this class looks familiar.
+            <li><img src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100"> <a href=project-mobile.html>Mobile Web Development</a>
+            <p>Making mobile apps isn't so hard after all.
+            <li><img src=views/images/pizzeria-100.jpg style=width:100px> <a href=views/pizza.html>Cam's Pizzeria</a>
+            <p>Who wants a performant pizza?</ul>
+    </div>
+    <footer>
+        <p>© Web Performance 2014 <span id=crp-stats></span></footer>
+</div>
